--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 	margin-bottom: 4px;
 }
 
+
 /*buttons and more*/
 
 .buttonArea {
@@ -71,10 +72,28 @@ body {
 	grid-row: 2;
 }
 
-.buttonArea > button {
+.toggle-buttons {
+	display: flex;
+	justify-content: space-evenly;
+	width: 70%;
+}
+
+.toggle-buttons input[type="radio"] {
+	visibility: hidden;
+}
+
+.toggle-buttons label {
+	border: 1px solid black;
+	padding: 0.5em;
 	width: 20%;
 }
 
-.buttonArea > .clear-canvas {
-	margin-left: 10%;
+.toggle-buttons input:checked + label {
+	background: #0da2f7;
 }
+
+input:hover + label,
+input:focus + label {
+	background: #EEE;
+}
+
